--- a/templates/index.html
+++ b/templates/index.html
@@ -29,30 +29,13 @@
           <div class="msg-info-name">BOT</div>
           <div class="msg-info-time">12:45</div>
         </div>
-
         <div class="msg-text">
-          Hi, welcome to SimpleChat! Go ahead and send me a message. 😄
+          Hi, welcome to Talk.Ai!<br> Try to say something! 😄
         </div>
       </div>
     </div>
 
-    <div class="msg right-msg">
-      <div
-       class="msg-img"
-       style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"
-      ></div>
-
-      <div class="msg-bubble">
-        <div class="msg-info">
-          <div class="msg-info-name">Sajad</div>
-          <div class="msg-info-time">12:46</div>
-        </div>
-
-        <div class="msg-text">
-          You can change your name in JS section!
-        </div>
-      </div>
-    </div>
+  
   </main>
 
   <form class="msger-inputarea">
