Add voice input connection to chat, main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,295 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SimpleChat</title>
-  <link rel="stylesheet" type="text/css" href="../static/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <base href="/"/>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- BootStrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../static/app.css">
+>
+
+  <title>Messenger UX</title>
 </head>
 <body>
-  <section class="msger">
-  <header class="msger-header">
-    <div class="msger-header-title">
-      <i class="fas fa-comment-alt"></i> SimpleChat
-    </div>
-    <div class="msger-header-options">
-      <span><i class="fas fa-cog"></i></span>
-    </div>
-  </header>
-
-  <main class="msger-chat">
-    <div class="msg left-msg">
-      <div
-       class="msg-img"
-       style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"
-      ></div>
-
-      <div class="msg-bubble">
-        <div class="msg-info">
-          <div class="msg-info-name">BOT</div>
-          <div class="msg-info-time">12:45</div>
-        </div>
-        <div class="msg-text">
-          Hi, welcome to Talk.Ai!<br> Try to say something! 😄
-        </div>
+  <section id="main_section" data-cc=0 data-desktop="0178d4" data-mobile="202124">
+    <div class="row">
+      <div class="col-12 col-md-4"> 
+        <!-- Message Navigation -->
+        <div class="nav-container">
+          <nav class="navigation">
+            <div class="nav-top">
+              <h1 id="nav_title">Messages</h1>
+              <i class="fa fa-search"></i>
+              <i class="fa fa-ellipsis-v"></i>
+            </div>
+          </nav>
+          <!-- Floating Chat Icon-->
+          <div id="floater">
+            <div class="floater-content">
+              <i class="material-icons">message</i>
+              <p id="action_text" style="display: none;">Start Chat</p>
+            </div>
+          </div>
       </div>
+    <!-- Message Conversations -->
+    <div id="convo-main-container">
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div>
+        <div class="msg-preview">
+          <h3 class="username">Wife</h3>
+          <p>Dinner and movie night</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 24</small>
+        </div> 
+      </div>
+      <!--  Message Preview Tray-->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div>
+        <div class="msg-preview">
+          <h3 class="username">Mom</h3>
+          <p>Hi son, Are you eating healthy. Make sure you take time out  to eat.</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 24</small>
+        </div> 
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Dad</h3>
+          <p>Great Job son !! I'm so proud of you!!</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 21</small>
+      </div> 
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Tony</h3>
+          <p> You: Your birthday coming up really soon, Any plans yet ??</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 20</small>
+        </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Project Manager</h3>
+          <p>Hey, your pull request look great man!  </p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 20</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Jane</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 19</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">John</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 18</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">David</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 18</small>
+      </div>  
+      </div>
+      <!-- message -->
+    <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">(555)-555-5555</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 15</small>
+      </div>  
+      </div>
+
+    <!-- Dummy Convo Duplicants-->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div>
+        <div class="msg-preview">
+          <h3 class="username">Mom</h3>
+          <p>Hi son, Are you eating healthy. Make sure you take time out  to eat.</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 24</small>
+        </div> 
+      </div> 
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Dad</h3>
+          <p>Great Job son !! I'm so proud of you!!</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 21</small>
+      </div> 
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Tony</h3>
+          <p> You: Your birthday coming up really soon, Any plans yet ??</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 20</small>
+        </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Project Manager</h3>
+          <p>Hey, your pull request look great man!  </p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 20</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">Jane</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 19</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">John</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 18</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-img fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username">David</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 18</small>
+      </div>  
+      </div>
+      <!-- message -->
+      <div class="convo-wrapper">
+        <div class="img-tray"> 
+          <i class="profile-im2g fa fa-user"></i>
+        </div> 
+        <div class="msg-preview">
+          <h3 class="username"> (555)-555-5555</h3>
+          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
+        </div>
+        <div class="date-tray">
+          <small class="msg-date"> July 15</small>
+      </div>  
     </div>
-
-  
-  </main>
-
-  <form class="msger-inputarea">
-    <input type="text" class="msger-input" placeholder="Enter your message...">
-    <button type="submit" class="msger-send-btn">Send</button>
-  </form>
+    </div>
+   </div>
+  </div>
 </section>
+
+  <!-- Desktop Right panel-->
+  <section id="main_panel_right">
+    <div class="row no-gutters">
+      <div class="col-9 col-md-9">
+        <div id="landing_hero">
+          <img id="landing_splash" src="../static/splash_dark.svg" alt="Nothing">
+          <h1 class="title">Stay Connected with you Phone.</h1>
+          <p class="subtitle">
+            Messages for web connects to your phone to sync messages. 
+            To reduce data usage, connect your phone to Wi-Fi.
+          </p>
+        </div>
+     </div>
+  </div>
+  </section>
+  
 </body>
-<script src="../static/main.js"></script>
-</html>
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!-- BootStrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="../static/app.js"></script>
