--- a/static/app.css
+++ b/static/app.css
@@ -35,7 +35,7 @@ body {
   align-self: flex-start;
   padding: 10px 0;
   box-shadow: 0px 0px 5px #005;
-  transition: boxshadow 0.35s ease-in-out; }
+  transition: boxshadow 0.35s ease-in-out; } 
   .nav-container .nav-top {
     display: flex;
     flex-direction: row;
@@ -44,17 +44,35 @@ body {
     width: 100%;
     height: 50px;
     padding: 10px; }
+    .dropdown_1 {
+      padding: 7px 0px;
+      margin: 10px 60px;
+      position: fixed;
+      top: 60px;
+      right: 1450px;
+      z-index: 1000;}
+    .dropdown_2 {
+      padding: 7px 0px;
+      margin: 10px 60px;
+      position: fixed;
+      top: 60px;
+      right: 1250px;
+      z-index: 1000;}   
     .nav-container .nav-top #nav_title {
       font: 400 18px "Google Sans", Tinos, Roboto;
       letter-spacing: 0.02rem; }
     .nav-container .nav-top i {
       vertical-align: middle;
       font-size: 18px; }
+    
 
 #floater {
   padding: 7px 0px;
   margin: 10px 60px;
-  z-index: 300;
+  position: fixed;
+  top: 220px;
+  left: 330px;
+  z-index: 1000;
   width: clamp(150px 300px, 500px);
   height: 50px;
   display: flex;
@@ -208,8 +226,8 @@ body {
   /* fixed navigation width when position is set to fixed */
   box-sizing: border-box;
   padding: 5px;
-  height: 150px;
-  max-height: 150px;
+  height: 300px;
+  max-height: 300px;
   position: fixed;
   top: 1px;
   left: 0;
