--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
   <title>Messenger UX</title>
 </head>
 <body>
+  
   <section id="main_section" data-cc=0 data-desktop="0178d4" data-mobile="202124">
     <div class="row">
       <div class="col-12 col-md-4"> 
@@ -28,238 +29,38 @@
               <h1 id="nav_title">Messages</h1>
               <i class="fa fa-search"></i>
               <i class="fa fa-ellipsis-v"></i>
+              <div class="dropdown_1">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton_1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Mode Select
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton_1">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+              <div class="dropdown_2">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton_2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="False">
+                  Language Select  
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton_2">
+                  <a class="dropdown-item" href="#">English</a>
+                  <a class="dropdown-item" href="#">Japanese</a>
+              </div>
+            </div>
             </div>
           </nav>
           <!-- Floating Chat Icon-->
-          <div id="floater">
+          <form method="GET" action="chat">
+            <button type = "submit" id = "floater">
             <div class="floater-content">
-              <i class="material-icons">message</i>
-              <p id="action_text" style="display: none;">Start Chat</p>
-            </div>
+                <i class="material-icons">message</i>
+                <p id="action_text" style="display: none;">Start Chat</p>
+            </div>   
+            </button>
+            </form>
           </div>
       </div>
-    <!-- Message Conversations -->
-    <div id="convo-main-container">
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div>
-        <div class="msg-preview">
-          <h3 class="username">Wife</h3>
-          <p>Dinner and movie night</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 24</small>
-        </div> 
-      </div>
-      <!--  Message Preview Tray-->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div>
-        <div class="msg-preview">
-          <h3 class="username">Mom</h3>
-          <p>Hi son, Are you eating healthy. Make sure you take time out  to eat.</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 24</small>
-        </div> 
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Dad</h3>
-          <p>Great Job son !! I'm so proud of you!!</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 21</small>
-      </div> 
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Tony</h3>
-          <p> You: Your birthday coming up really soon, Any plans yet ??</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 20</small>
-        </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Project Manager</h3>
-          <p>Hey, your pull request look great man!  </p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 20</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Jane</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 19</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">John</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 18</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">David</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 18</small>
-      </div>  
-      </div>
-      <!-- message -->
-    <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">(555)-555-5555</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 15</small>
-      </div>  
-      </div>
-
-    <!-- Dummy Convo Duplicants-->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div>
-        <div class="msg-preview">
-          <h3 class="username">Mom</h3>
-          <p>Hi son, Are you eating healthy. Make sure you take time out  to eat.</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 24</small>
-        </div> 
-      </div> 
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Dad</h3>
-          <p>Great Job son !! I'm so proud of you!!</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 21</small>
-      </div> 
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Tony</h3>
-          <p> You: Your birthday coming up really soon, Any plans yet ??</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 20</small>
-        </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Project Manager</h3>
-          <p>Hey, your pull request look great man!  </p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 20</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">Jane</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 19</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">John</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 18</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-img fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username">David</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 18</small>
-      </div>  
-      </div>
-      <!-- message -->
-      <div class="convo-wrapper">
-        <div class="img-tray"> 
-          <i class="profile-im2g fa fa-user"></i>
-        </div> 
-        <div class="msg-preview">
-          <h3 class="username"> (555)-555-5555</h3>
-          <p>Ipsum aut temporibus voluptates assumenda optio Aut nulla dolorem ratione saepe et rerum nostrum? Pariatur porro velit dolorem consequatur soluta? Quam voluptatibus quis culpa similique excepturi. Iste accusantium voluptates fugit?</p>
-        </div>
-        <div class="date-tray">
-          <small class="msg-date"> July 15</small>
-      </div>  
     </div>
     </div>
    </div>
@@ -284,12 +85,11 @@
   
 </body>
 <!-- JQuery -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <!-- BootStrap JS -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- Your custom JS -->
 <script src="../static/app.js"></script>
