still fixing socket

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimpleChat</title>
   <link rel="stylesheet" type="text/css" href="../static/chat.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="socket.io/socket.io.js"></script>
+  <script src="../static/chat.js"></script>
+   <script type="text/javascript">
+        var socket = io.connect('http://localhost:8000');
+        socket.on('new_speech', function(data) {
+            console.log(data.speech_text);
+        });
+    </script>
 </head>
 <body>
   <section class="msger">
@@ -44,5 +53,4 @@
   </form>
 </section>
 </body>
-<script src="../static/chat.js"></script>
 </html>
