--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,14 +6,23 @@
   <title>SimpleChat</title>
   <link rel="stylesheet" type="text/css" href="../static/chat.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="socket.io/socket.io.js"></script>
-  <script src="../static/chat.js"></script>
-   <script type="text/javascript">
+  <!-- <script src="socket.io/socket.io.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></!-->
+
+<!-- <script type="text/javascript" charset="utf-8">
+    var socket = io();
+    socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
+    });
+  </script> -->
+
+   <!-- <script type="text/javascript">
         var socket = io.connect('http://localhost:8000');
+        // var socket = io();
         socket.on('new_speech', function(data) {
             console.log(data.speech_text);
         });
-    </script>
+    </script> -->
 </head>
 <body>
   <section class="msger">
@@ -49,8 +58,10 @@
 
   <form class="msger-inputarea">
     <input type="text" class="msger-input" placeholder="Enter your message...">
-    <button type="submit" class="msger-send-btn">Send</button>
   </form>
+    <button type="button" class="msger-send-btn">Send</button>
 </section>
+  <script src="../static/chat.js"></script>
+  <script src="../static/chat2.js"></script>
 </body>
 </html>
