before putting everything into chatapp

--- a/chatapp/templates/chat.html
+++ b/chatapp/templates/chat.html
@@ -5,25 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SimpleChat</title>
   <link rel="stylesheet" type="text/css" href="../static/chat.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="socket.io/socket.io.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></!-->
-
-<!-- <script type="text/javascript" charset="utf-8">
-    var socket = io();
-    socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
-    });
-  </script> -->
-
-   <!-- <script type="text/javascript">
-        var socket = io.connect('http://localhost:8000');
-        // var socket = io();
-        socket.on('new_speech', function(data) {
-            console.log(data.speech_text);
-        });
-    </script> -->
+  <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <section class="msger">
   <header class="msger-header">
