--- a/chatapp/templates/chat.html
+++ b/chatapp/templates/chat.html
@@ -6,6 +6,12 @@
   <title>SimpleChat</title>
   <link rel="stylesheet" type="text/css" href="../static/chat.css">
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
+  <!-- <script type="text/javascript" charset="utf-8">
+    var socket = io();
+    socket.on('connect', function() {
+        socket.emit('my event', {data: 'I\'m connected!'});
+    }); -->
+
 </head>
 
 <body>
