All the function added!

--- a/chatapp/templates/chat.html
+++ b/chatapp/templates/chat.html
@@ -47,10 +47,11 @@
   </main>
 
   <form class="msger-inputarea">
-    <input type="text" class="msger-input" placeholder="Enter your message...">
+    <!-- <input type="text" class="msger-input" placeholder="Enter your message..."> -->
+    <button type="button" class="msger-send-btn">Start Chat!</button>
   </form>
-    <button type="button" class="msger-send-btn">Send</button>
 </section>
   <script src="../static/chat.js"></script>
+
 </body>
 </html>
