--- a/chatapp/templates/index.html
+++ b/chatapp/templates/index.html
@@ -31,12 +31,11 @@
               <i class="fa fa-ellipsis-v"></i>
               <div class="dropdown_1">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton_1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Mode Select
+                  Select AI
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton_1">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" id="chatGPT" href="#">chat GPT</a>
+                  <a class="dropdown-item" id="Mistral_7b" href="#">Mistral-7b</a>
               </div>
             </div>
               <div class="dropdown_2">
